--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
   </style>
 </head>
 <body>
-  <!-- HERO -->
   <header>
     <div class="container" style="text-align:center;">
       <h1>James Turner Millar</h1>
@@ -44,7 +43,6 @@
     </div>
   </header>
 
-  <!-- ABOUT -->
   <section class="section about">
     <div class="container" style="display:flex;flex-wrap:wrap;align-items:center;gap:3rem;">
       <div>
@@ -52,12 +50,10 @@
         <p>With over six years of full-time teaching experience, I’ve guided hundreds of students—from young learners to C-suite executives—to reach their English goals. Whether you need a band-8 IELTS score, confident business presentations, or simply smoother everyday conversation, I create personalised lessons that deliver results.</p>
         <p><strong>Qualifications:</strong> CELTA • BA (Hons) English • IELTS Examiner Training</p>
       </div>
-      <!-- Replace with your own square photo -->
       <img src="https://i.pravatar.cc/400?u=jamesturnermillar" alt="James Turner Millar">
     </div>
   </section>
 
-  <!-- SERVICES -->
   <section class="section" style="background:#fff;">
     <div class="container">
       <h2 style="text-align:center;margin-bottom:2.5rem;">What I Offer</h2>
@@ -82,7 +78,6 @@
     </div>
   </section>
 
-  <!-- HOW IT WORKS -->
   <section class="section">
     <div class="container">
       <h2 style="text-align:center;margin-bottom:2rem;">How It Works</h2>
@@ -105,7 +100,6 @@
     </div>
   </section>
 
-  <!-- TESTIMONIALS -->
   <section class="section" style="background:#fff;">
     <div class="container">
       <h2 style="text-align:center;margin-bottom:2rem;">What Students Say</h2>
@@ -126,23 +120,69 @@
     </div>
   </section>
 
-  <!-- CONTACT -->
   <section id="contact" class="section">
     <div class="container" style="max-width:700px;text-align:center;">
       <h2>Ready to Start?</h2>
       <p>Email me today for a free consultation and level check. I usually reply within 2 hours.</p>
       <p style="margin-top:1.2rem;font-size:1.2rem;"><strong>Email:</strong> <a href="mailto:james@jamesturnermillar.com">james@jamesturnermillar.com</a><br>
-      <strong>WhatsApp:</strong> <a href="https://wa.me/971501234567"> 971 50 123 4567</a></p>
+      <strong>WhatsApp:</strong> <a href="https://wa.me/971501234567">971 50 123 4567</a></p>
       <a href="mailto:james@jamesturnermillar.com" class="btn">Book Your Free Consultation</a>
     </div>
   </section>
 
-  <!-- FOOTER -->
   <footer>
     © <span id="yr"></span> James Turner Millar. All rights reserved.
   </footer>
   <script>document.getElementById('yr').textContent=new Date().getFullYear();</script>
+
+  <!-- ===== AI Liaison Widget ===== -->
+  <style>
+    #liaison-root{position:fixed;bottom:20px;right:20px;width:360px;max-width:90vw;background:#fff;border-radius:12px;box-shadow:0 8px 30px rgba(0,0,0,.15);display:flex;flex-direction:column;font-size:14px;z-index:9999;}
+    #liaison-header{background:var(--primary);color:#fff;padding:.75rem 1rem;border-radius:12px 12px 0 0;display:flex;align-items:center;justify-content:space-between;}
+    #liaison-close{background:none;border:none;color:#fff;font-size:18px;cursor:pointer;}
+    #liaison-body{flex:1;height:280px;overflow-y:auto;padding:.75rem 1rem;}
+    .liaison-msg{margin:.35rem 0;line-height:1.4;}
+    .liaison-user{text-align:right;color:var(--primary);}
+    .liaison-bot{text-align:left;color:var(--dark);}
+    #liaison-input-area{border-top:1px solid #e5e5e5;display:flex;padding:.5rem;}
+    #liaison-input{flex:1;border:none;outline:none;padding:.5rem;font-size:14px;}
+    #liaison-send{background:var(--accent);color:#fff;border:none;padding:.5rem .9rem;border-radius:4px;cursor:pointer;font-weight:600;}
+    #liaison-launcher{position:fixed;bottom:20px;right:20px;background:var(--primary);color:#fff;border:none;border-radius:50%;width:56px;height:56px;font-size:24px;box-shadow:0 4px 12px rgba(0,0,0,.25);cursor:pointer;z-index:9998;}
+  </style>
+  <button id="liaison-launcher" title="Ask me anything">💬</button>
+  <div id="liaison-root" style="display:none;">
+    <div id="liaison-header"><span><strong>AI Liaison – James TM</strong></span><button id="liaison-close">&times;</button></div>
+    <div id="liaison-body"></div>
+    <div id="liaison-input-area">
+      <input id="liaison-input" type="text" placeholder="Type your question…" autocomplete="off">
+      <button id="liaison-send">Send</button>
+    </div>
+  </div>
+  <script>
+    const ENDPOINT="https://api.openai.com/v1/chat/completions";
+    const API_KEY="sk-YOUR-OPENAI-KEY";
+    const PERSONA=`You are the friendly AI liaison for James Turner Millar's multi-service website (English teaching, event management, sports coaching). Keep answers ≤ 80 words. Be conversational, upbeat, lightly sales-oriented. If a user asks for booking, collect: service type, age group, preferred contact method (email/WhatsApp), then ask for best date/time and finish with: “I’ll pass this to James—expect a reply within 2 h.” Never make up prices or guarantees beyond what's on the site.`;
+    const launcher=document.getElementById('liaison-launcher');
+    const root=document.getElementById('liaison-root');
+    const body=document.getElementById('liaison-body');
+    const input=document.getElementById('liaison-input');
+    const sendBtn=document.getElementById('liaison-send');
+    const closeBtn=document.getElementById('liaison-close');
+    let thread=[{role:"system",content:PERSONA}];
+    function addMsg(txt,who){
+      const div=document.createElement('div');div.className='liaison-msg liaison-'+who;div.textContent=txt;body.appendChild(div);body.scrollTop=body.scrollHeight;
+    }
+    async function callLLM(){
+      const userText=input.value.trim();if(!userText)return;
+      addMsg(userText,'user');input.value='';thread.push({role:"user",content:userText});
+      setTimeout(()=>{const dummy="Got it—thanks for the details! I’ll pass this straight to James and he’ll be in touch within 2 hours.";addMsg(dummy,'bot');thread.push({role:"assistant",content:dummy});},600);
+    }
+    launcher.addEventListener('click',()=>{root.style.display="flex";input.focus();});
+    closeBtn.addEventListener('click',()=>root.style.display="none");
+    sendBtn.addEventListener('click',callLLM);
+    input.addEventListener('keydown',e=>{if(e.key==="Enter")callLLM();});
+  </script>
+  <!-- ===== /AI Liaison Widget ===== -->
 </body>
 </html>
-
 
