--- a/index.html
+++ b/index.html
@@ -2,136 +2,124 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>James Turner Millar | Expert English Teacher</title>
+  <title>James Turner Millar | English Teacher & Events Manager</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     :root{
-      --primary:#004d40;
-      --accent:#ffb300;
-      --light:#f5f7fa;
-      --dark:#222;
-      --grey:#677788;
+      --blk:#000;
+      --wht:#fff;
+      --olive:#3a3d2a;
+      --olive-light:#585b42;
+      --grey:#a7a7a7;
+      --accent:#ffb300;          /* keeps your gold CTA */
     }
-    *{box-sizing:border-box;margin:0;padding:0;font-family:"Segoe UI",Roboto,Helvetica,Arial,sans-serif;}
-    body{line-height:1.6;color:var(--dark);background:var(--light);}
-    a{text-decoration:none;color:inherit;}
+    *{box-sizing:border-box;margin:0;padding:0;font-family:"Inter","Helvetica Neue",Helvetica,Arial,sans-serif;}
+    body{line-height:1.6;color:var(--wht);background:var(--blk);}
     img{max-width:100%;display:block;}
+    a{text-decoration:none;color:inherit;}
     .container{width:90%;max-width:1100px;margin:auto;}
-    header{background:var(--primary);color:#fff;padding:2.5rem 0;}
-    header h1{font-size:2.2rem;margin-bottom:.3rem;}
-    header p{font-size:1.1rem;opacity:.9;}
-    .btn{display:inline-block;background:var(--accent);color:#fff;padding:.85rem 1.9rem;border-radius:4px;font-weight:600;margin-top:1rem;transition:.25s;}
-    .btn:hover{opacity:.9;}
+    .btn{display:inline-block;background:var(--accent);color:var(--blk);padding:.85rem 2rem;border-radius:4px;font-weight:700;margin-top:1.2rem;transition:.25s;}
+    .btn:hover{background:var(--wht);}
+    nav{background:var(--blk);border-bottom:1px solid var(--olive);position:sticky;top:0;z-index:10;}
+    nav .container{display:flex;align-items:center;justify-content:space-between;padding:1.2rem 0;}
+    nav ul{list-style:none;display:flex;gap:2rem;}
+    nav a{letter-spacing:.5px;font-size:.9rem;text-transform:uppercase;}
+    nav a:hover{color:var(--accent);}
+    header{background:var(--blk);padding:6rem 0 4rem;text-align:center;}
+    header h1{font-size:3.2rem;font-weight:900;letter-spacing:-1px;}
+    header .sub{font-size:1.25rem;color:var(--grey);margin-top:.5rem;}
     .section{padding:4rem 0;}
-    .grid{display:grid;gap:2rem;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));}
-    .card{background:#fff;border-radius:6px;box-shadow:0 2px 8px rgba(0,0,0,.06);padding:2rem;text-align:center;}
-    .card h3{margin-bottom:.7rem;color:var(--primary);}
+    .grid{display:grid;gap:2rem;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));}
+    .card{background:var(--olive);border-radius:6px;padding:2rem;}
     .about{display:flex;flex-wrap:wrap;align-items:center;gap:3rem;}
-    .about div{flex:1 1 300px;}
-    .about img{flex:1 1 250px;border-radius:6px;}
-    footer{background:var(--dark);color:#fff;text-align:center;padding:2rem 0;font-size:.9rem;}
-    @media(max-width:600px){header h1{font-size:1.7rem;}}
+    .about div{flex:1 1 400px;}
+    .about img{flex:1 1 300px;border-radius:6px;filter:grayscale(20%);}
+    footer{background:var(--olive);text-align:center;padding:2rem 0;font-size:.85rem;color:var(--grey);}
+    @media(max-width:700px){header h1{font-size:2.2rem;}}
   </style>
 </head>
 <body>
-  <header>
-    <div class="container" style="text-align:center;">
-      <h1>James Turner Millar</h1>
-      <p>Certified English Language Teacher & IELTS Specialist</p>
-      <p>6+ Years Helping Learners Excel | Dubai & Online Worldwide</p>
-      <a href="#contact" class="btn">Book a Free Consultation</a>
+  <nav>
+    <div class="container">
+      <strong>JAMES TURNER-MILLAR</strong>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#credentials">Credentials</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <header id="home">
+    <div class="container">
+      <h1>English Teacher & Events Manager</h1>
+      <p class="sub">7 years · 4 countries · CELTA · NZQA course designer · Dubai based</p>
+      <a href="#contact" class="btn">Book a Consultation</a>
     </div>
   </header>
 
-  <section class="section about">
-    <div class="container" style="display:flex;flex-wrap:wrap;align-items:center;gap:3rem;">
+  <section id="about" class="section">
+    <div class="container about">
       <div>
-        <h2>Your Bridge to Fluent English</h2>
-        <p>With over six years of full-time teaching experience, I’ve guided hundreds of students—from young learners to C-suite executives—to reach their English goals. Whether you need a band-8 IELTS score, confident business presentations, or simply smoother everyday conversation, I create personalised lessons that deliver results.</p>
-        <p><strong>Qualifications:</strong> CELTA • BA (Hons) English • IELTS Examiner Training</p>
+        <h2>Straight-talking expertise</h2>
+        <p>From Manchester to Dubai I’ve taught in five major international organisations, designed NZQA-level accredited courses, and currently lead student experience for English Path Dubai (analysis, outreach, training, finance, event delivery).</p>
+        <p>Whether you need IELTS 8, executive business English, or a flawless corporate event, you get concise, data-driven planning and zero fluff.</p>
       </div>
-      <img src="https://i.pravatar.cc/400?u=jamesturnermillar" alt="James Turner Millar">
+      <img src="James picture with background - Copy.png" alt="James Turner-Millar">
     </div>
   </section>
 
-  <section class="section" style="background:#fff;">
+  <section id="services" class="section" style="background:var(--olive);">
     <div class="container">
-      <h2 style="text-align:center;margin-bottom:2.5rem;">What I Offer</h2>
+      <h2 style="text-align:center;margin-bottom:2.5rem;">What you can hire me for</h2>
       <div class="grid">
         <div class="card">
-          <h3>IELTS Exam Preparation</h3>
-          <p>Proven strategies for Band 7+ in Writing, Speaking, Reading & Listening. Mock tests and detailed feedback included.</p>
+          <h3>IELTS / Cambridge Exam Prep</h3>
+          <p>Band 7+ strategies, writing clinics, mock speaking tests with examiner feedback.</p>
         </div>
         <div class="card">
           <h3>Business English</h3>
-          <p>Email mastery, meeting skills, presentation confidence and industry-specific vocabulary that gets you promoted.</p>
+          <p>Email diplomacy, presentation drills, negotiation language—measurable KPIs after every block.</p>
         </div>
         <div class="card">
-          <h3>General English</h3>
-          <p>Grammar in real life, vocabulary that sticks, and fluency through conversation. All levels A1–C2 welcome.</p>
+          <h3>Event Management</h3>
+          <p>End-to-end: concept, budget, vendor negotiation, on-site execution, post-event analytics (UK, AU, CH, NZ experience).</p>
         </div>
         <div class="card">
-          <h3>Young Learners</h3>
-          <p>Fun, game-based classes that build confidence and literacy for ages 6–16. Cambridge YLE & school support.</p>
+          <h3>Training & QA</h3>
+          <p>Teacher training, curriculum audits, regulatory compliance (NZQA, British Council).</p>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="section">
+  <section id="credentials" class="section">
     <div class="container">
-      <h2 style="text-align:center;margin-bottom:2rem;">How It Works</h2>
-      <div class="grid" style="grid-template-columns:repeat(auto-fit,minmax(200px,1fr));text-align:center;">
-        <div>
-          <h3>1. Book a FREE 20-min chat</h3>
-          <p>We discuss your goals, assess your level, and choose a package.</p>
-        </div>
-        <div>
-          <h3>2. Choose your slot</h3>
-          <p>Flexible timings 7 days a week. Face-to-face in Dubai (Marina/JLT) or online via Zoom.</p>
-        </div>
-        <div>
-          <h3>3. Start learning</h3>
-          <p>Personalised lessons, weekly targets, and shared Google Docs for 24/7 feedback.</p>
-        </div>
-      </div>
-      <p style="text-align:center;margin-top:2rem;"><strong>Lesson length:</strong> 60 min | 90 min | 120 min<br>
-      <strong>Packages:</strong> 5, 10 or 20 lessons • Pay-as-you-go available</p>
+      <h2 style="text-align:center;margin-bottom:2rem;">Credentials & Results</h2>
+      <ul style="max-width:700px;margin:auto;list-style:none;color:var(--grey);">
+        <li style="margin-bottom:1rem;">Cambridge CELTA | Manchester University BA (Hons) History</li>
+        <li style="margin-bottom:1rem;">NZQA Level-3 course designer (16-week B1 programme, 200+ graduates)</li>
+        <li style="margin-bottom:1rem;">Teacher-of-the-Year 2018 – EF Manchester (4.7/5 student rating over 5 yrs)</li>
+        <li>Managed 15 000-runner half-marathon & UN-wellbeing summit logistics</li>
+      </ul>
     </div>
   </section>
 
-  <section class="section" style="background:#fff;">
-    <div class="container">
-      <h2 style="text-align:center;margin-bottom:2rem;">What Students Say</h2>
-      <div class="grid" style="gap:2rem;">
-        <blockquote class="card">
-          “James turned my IELTS writing from 6.0 to 7.5 in just 5 weeks. His feedback is razor-sharp and easy to follow.”
-          <footer style="margin-top:1rem;font-weight:bold;">— Aisha, UAE</footer>
-        </blockquote>
-        <blockquote class="card">
-          “Our 10-year-old son actually looks forward to class. James mixes games, stories and grammar perfectly.”
-          <footer style="margin-top:1rem;font-weight:bold;">— Patel family, India</footer>
-        </blockquote>
-        <blockquote class="card">
-          “I give presentations to investors now without fear. The business-English course paid for itself in one deal.”
-          <footer style="margin-top:1rem;font-weight:bold;">— Khalid, Saudi Arabia</footer>
-        </blockquote>
-      </div>
-    </div>
-  </section>
-
-  <section id="contact" class="section">
-    <div class="container" style="max-width:700px;text-align:center;">
-      <h2>Ready to Start?</h2>
-      <p>Email me today for a free consultation and level check. I usually reply within 2 hours.</p>
-      <p style="margin-top:1.2rem;font-size:1.2rem;"><strong>Email:</strong> <a href="mailto:james@jamesturnermillar.com">james@jamesturnermillar.com</a><br>
-      <strong>WhatsApp:</strong> <a href="https://wa.me/971501234567">971 50 123 4567</a></p>
-      <a href="mailto:james@jamesturnermillar.com" class="btn">Book Your Free Consultation</a>
+  <section id="contact" class="section" style="background:var(--olive);">
+    <div class="container centre" style="max-width:700px;">
+      <h2>Let’s talk next steps</h2>
+      <p>Email or WhatsApp for a free 20-minute consultation. I usually reply within two hours.</p>
+      <p style="margin-top:1.5rem;font-size:1.1rem;">
+        <a href="mailto:jamestm_aus@hotmail.com" style="color:var(--wht);">jamestm_aus@hotmail.com</a><br>
+        <a href="https://wa.me/971502576780" style="color:var(--wht);">+971 50 257 6780</a>
+      </p>
+      <a href="mailto:jamestm_aus@hotmail.com" class="btn">Start the conversation</a>
     </div>
   </section>
 
   <footer>
-    © <span id="yr"></span> James Turner Millar. All rights reserved.
+    © <span id="yr"></span> James Turner-Millar. All rights reserved.
   </footer>
   <script>document.getElementById('yr').textContent=new Date().getFullYear();</script>
 
@@ -185,4 +173,5 @@
   <!-- ===== /AI Liaison Widget ===== -->
 </body>
 </html>
+
 
